<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ESP8266-IOT</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="app_version">Version 0.0.4 Enthält Sourcecode der Fa. Expressif</string>
    <string name="tvApSsidTitle">SSID: </string>
    <string name="tvPasswordTitle">Password: </string>
    <string name="switchIsSsidHiddenTitle">SSID versteckt: </string>
    <string name="spinnerTaskResultCountTitle">Task result count</string>
    <string name="btnConfirmTitle">Fertig</string>
    <string name="start_str">Scan</string>
    <string name="btnSetup_str">Setup</string>
    <string name="btnOk">Save</string>
    <string name="btnScan_str">Scan</string>
    <string name="SetupInfo_str">
        <![CDATA[
        <b>Einrichtung</b><br>
        <i><b>SSID:</b><br>Hier wird Ihnen die Kennung des AP (Routers) mitgeteilt.</i><br>
        <i><b>Passwort:</b><br>Geben Sie hier das Passwort des AP (Routers) an.</i><br><br>
        <i>Wenn die SSID im AP als \"Versteckt\" eingerichtet ist stellen sie den Schalter auf \"An\".</i>
        ]]>
    </string>
    <string name="MQTT_IP">MQTT IP</string>
    <string name="MQTT_IP_value">192.168.178.5</string>
    <string name="MQTT_Port">MQTT Port</string>
    <string name="MQTT_Port_Value">1883</string>
    <string name="MQTT_User">MQTT User</string>
    <string name="MQTT_User_Value"></string>
    <string name="MQTT_Pass">MQTT Pass</string>
    <string name="MQTT_Pass_Value"></string>
    <string name="MQTT_SSL">MQTT SSL</string>
    <string name="UPGRADE_IP">Upgrade IP</string>
    <string name="UPGRADE_IP_Value">84.200.150.145</string>
    <string name="UPGRADE_PORT">Port</string>
    <string name="UPGRADE_PORT_Value">80</string>
    <string name="btn_ok1">Send\nto all</string>
    <string name="btn_ok2">to all</string>

    <string name="ImpulsText">Impulslänge</string>
    <string name="Impuls_Value">1000</string>

    <string name="Alert_Versionbuilder">Version</string>
</resources>
