<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

<ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvApSsid"
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/tvApSsidTitle"
                    android:textSize="24sp">
                </TextView>

                <TextView
                    android:id="@+id/tvApSssidConnected"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:singleLine="true"
                    android:textSize="24dp"
                    >
                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvApPassword"
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:text="@string/tvPasswordTitle"
                    android:textSize="24sp"/>

                <EditText
                    android:id="@+id/edtApPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="text"
                    android:singleLine="true"
                    android:text=""
                    android:textSize="24dp"
                    tools:ignore="TextFields">

                </EditText>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center_vertical"
                android:measureWithLargestChild="false"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/switchIsSsidHiddenTitle"
                    android:textSize="24sp"/>

                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>

                <Switch
                    android:id="@+id/switchIsSsidHidden"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/spinnerTaskResultCountTitle"
                    android:textSize="24sp"/>

                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>

                <Spinner
                    android:id="@+id/spinnerTaskResultCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />

            </LinearLayout>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:height="2dp"
                android:background="#ffffffff"
                android:singleLine="false"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/MQTT_IP"
                    android:textSize="24sp"/>

                <EditText
                    android:id="@+id/edt_mqtt_ip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="text"
                    android:singleLine="true"
                    android:text="@string/MQTT_IP_value"
                    android:textSize="24dp"
                    tools:ignore="TextFields"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/MQTT_Port"
                    android:textSize="24sp"/>

                <EditText
                    android:id="@+id/edt_mqtt_port"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="text"
                    android:singleLine="true"
                    android:text="@string/MQTT_Port_Value"
                    android:textSize="24dp"
                    tools:ignore="TextFields"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/MQTT_SSL"
                    android:textSize="24sp"/>

                <Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>

                <Switch
                    android:id="@+id/sw_mqtt_ssl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/MQTT_Pass"
                    android:textSize="24sp"/>

                <EditText
                    android:id="@+id/edt_mqtt_pass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="text"
                    android:singleLine="true"
                    android:text="@string/MQTT_Pass_Value"
                    android:textSize="24dp"
                    tools:ignore="TextFields"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/MQTT_User"
                    android:textSize="24sp"/>

                <EditText
                    android:id="@+id/edt_mqtt_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="text"
                    android:singleLine="true"
                    android:text="@string/MQTT_User_Value"
                    android:textSize="24dp"
                    tools:ignore="TextFields"/>
            </LinearLayout>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:height="2dp"
                android:background="#ffffffff"
                android:singleLine="false"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/UPGRADE_IP"
                    android:textSize="24sp"/>

                <EditText
                    tools:ignore="TextFields"
                    android:id="@+id/edt_Upgrade_ip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="text"
                    android:singleLine="true"
                    android:text="@string/UPGRADE_IP_Value"
                    android:textSize="24dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/UPGRADE_PORT"
                    android:textSize="24sp"/>

                <EditText
                    tools:ignore="TextFields"
                    android:id="@+id/edt_Upgrade_port"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="text"
                    android:singleLine="true"
                    android:text="@string/UPGRADE_PORT_Value"
                    android:textSize="24dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewImpuls"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ImpulsText"
                    android:textSize="24sp"/>

                <EditText
                    tools:ignore="TextFields"
                    android:id="@+id/edt_Impuls_length"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="text"
                    android:singleLine="true"
                    android:text="@string/Impuls_Value"
                    android:textSize="24dp"/>
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:layout_weight="1"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center_vertical"
                android:orientation="vertical"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|bottom"
                    android:text="@string/app_version"
                    android:textColor="#404040"
                    android:textSize="12dp"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <RelativeLayout android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="false"
                    android:layout_alignParentStart="false"
                    android:gravity="bottom|right"
                    android:paddingBottom="5dp"
                    android:paddingRight="5dp">
        <net.shikii.widgets.SAutoBgButton
        android:id="@+id/btnSave"
        android:layout_gravity="center_horizontal|center|bottom"
        android:shadowRadius="5"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:gravity="center"
        android:background="@drawable/buttonshape_red"
        android:clickable="true"
        android:text="@string/btn_ok1"
        android:textColor="#FFFFFF"
        android:textSize="18dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="5dp"
        android:layout_alignParentBottom="true"
        />


    </RelativeLayout>


</RelativeLayout>